[2024-01-09] [15:35] [components/recent-movements.tsx] Created recent movements component to show all stock movements
[2024-01-09] [15:35] [app/(main)/page.tsx] Updated home page to show recent movements instead of recent putaways
[2024-01-09] [15:40] [components/recent-movements.tsx] Fixed recent movements component to be server-side
[2024-03-20] [10:00] [.env] Added SITE_PASSWORD environment variable
[2024-03-20] [10:00] [middleware.ts] Created new file for authentication middleware
[2024-03-20] [10:00] [app/login/page.tsx] Created new login page
[2024-03-20] [10:00] [app/api/login/route.ts] Created new login API route
[2024-03-20] [10:30] [components/remove-stock-selection.tsx] Fixed toast import path
[2024-03-20] [10:30] [components/stock-summary-table.tsx] Created stock summary table component
[2024-03-20] [11:00] [lib/db.ts] Enhanced Prisma client with better connection handling and auto-reconnect
[2024-03-20] [11:30] [lib/db.ts] Updated Prisma client to handle Render.com database spin-up behavior
[2024-03-20] [11:45] [components/stats-cards.tsx] Added retry logic and error handling for database queries
[2024-03-20] [12:00] [components/recent-movements.tsx] Added retry logic and improved error handling for database connections
[2024-03-20] [12:15] [.env] Fixed DATABASE_URL to use correct Render.com hostname
[2024-03-20] [12:30] [scripts/*] Added database backup scripts (bash, PowerShell, and GitHub Actions)
[2024-03-20] [12:45] [app/(main)/stock/summary/page.tsx] Fixed stock summary page to use correct Prisma schema fields
[2024-03-20] [12:45] [components/stock-summary-table.tsx] Updated stock summary table to use location.label instead of bayCode
[2024-03-20] [13:00] [.gitignore] Updated to keep Prisma migrations and better organize ignored files
[2024-03-20] [13:15] [package.json] Added @types/lodash for TypeScript support
[2024-03-20] [13:30] [components/barcode-scanner.tsx] Fixed type error in QR code format handling