@@ -116,3 +116,4 @@
 [2024-03-20] [13:00] [.gitignore] Updated to keep Prisma migrations and better organize ignored files
 [2024-03-20] [13:15] [package.json] Added @types/lodash for TypeScript support
 [2024-03-20] [13:30] [components/barcode-scanner.tsx] Fixed type error in QR code format handling
+[2024-03-20] [13:45] [components/barcode-scanner.tsx] Removed unused camera-based barcode scanner component as we use scan gun input instead
